# bazel_rollup_module_root

./: .gitignore  README.md  WORKSPACE  package.json
app/: BUILD.bazel  index.ts  rollup.config.js
lib/: BUILD.bazel
lib/src/: index.ts
lib_root/: BUILD.bazel  index.ts
