package(default_visibility=["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")

ts_library(
    name = "app",
    srcs = glob(["*.ts"]),
    deps = [
      "//lib"
    ],
    tsconfig = "//:tsconfig.json"
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_point = "index.ts",
    deps = [":app", "//lib"]
)